Fix box alignment.

--- a/web/css/000-controls.css
+++ b/web/css/000-controls.css
@@ -45,7 +45,7 @@ a:hover {
 	display: block;
 	width: 138px;
 	height: 138px;
-	margin: 6px;
+	margin: 5px;
 	text-align: center;
 	font-style: italic;
 	border: 1px #86A1B6 dotted;
